--- a/magazine/templates/base.html
+++ b/magazine/templates/base.html
@@ -26,7 +26,7 @@
 		</div>
 		
 		{% block sidebar %}
-		<div class="col col-md-3 sidebar" style="">
+		<div class="col col-md-3 sidebar">
 		{% include 'sidebar.html' %}
 		
 		</div>
