enable viewing any user profile added a get single user class method in the Profile model

--- a/magazine/templates/article/article.html
+++ b/magazine/templates/article/article.html
@@ -28,7 +28,7 @@
           <p class="font-weight-bold">
             {{ comment.name }}
             <span class=" text-muted font-weight-normal">
-              {{comment.author}} | {{ comment.created_on }}
+              <a href="/profile?id={{comment.author.id}}">{{comment.author}}</a> | {{ comment.created_on }}
             </span>
           </p>
           {{ comment.body | linebreaks }}
