--- a/magazine/templates/index.html
+++ b/magazine/templates/index.html
@@ -28,7 +28,7 @@
   </div>
   <div class="card-footer text-muted">
     Posted on {{article.created_on}}by
-    <a href="{% url "filter_by_editor" article.editor %}">{{article.editor}}</a>
+    <a href="/profile/?id={{article.editor.id}}">{{article.editor}}</a>
   </div>
 </div>
   {% endfor %}
