--- a/magazine/templates/registration/login.html
+++ b/magazine/templates/registration/login.html
@@ -5,7 +5,7 @@
 <div class="container">
 	<div class="row">
 		<div class="col">
-			<div class="panel panel-default card" style="width: 50%; padding: 20px; position: relative; left: 25%; margin: 20px;">
+			<div class="panel panel-default card" style="width: 400px; padding: 20px; position: relative; left: 25%; margin: 20px;">
 				<div class="panel-heading">
 				   <h3 class="  text-primary text-center">Sign In</h3>
 				</div>
