--- a/magazine/templates/registration/registration_form.html
+++ b/magazine/templates/registration/registration_form.html
@@ -8,7 +8,7 @@
 			<p>Some info is incorrect</p>
 			{% endif %}
 			
-			<div class="panel panel-default">
+			<div class="panel panel-default" style="">
 				<div class="panel-heading">
 				   <h3 class="text-center text-primary">Sign Up</h3>
 				</div>
