--- a/magazine/templates/sidebar.html
+++ b/magazine/templates/sidebar.html
@@ -92,7 +92,7 @@
 			  <div class="row">
 				<div class="">
 				  <div class="">
-					<a style="margin-left: 15px; border-radius: 0;" class="btn btn-primary" href="{% url "update_profile" user.username %}">Update profile</a>
+					<a style="margin-left: 15px; border-radius: 0;" class="btn btn-primary" href="{% url "update_profile" %}">Update profile</a>
 					<a style="margin-left: 15px; border-radius: 0;" class="btn btn-primary" href="{% url "delete_user" user.username %}">Delete account</a>
 				  </div>
 				  </div>
