fix loading logged in user profile image in all profiles

--- a/magazine/templates/profile/profile.html
+++ b/magazine/templates/profile/profile.html
@@ -13,7 +13,7 @@
 <div class="col-md-12" style="margin-top: 0; color: white; background-color: transparent; border: 0;">
     <div class="profile-card" style="background-color: #1d2b38; border: none;">
         <div class="profile-back bg-primary" ></div>
-        <div class="rounded-circle profile-pic" style="background-image: url({{user.profile.image}});background-position: center; background-size: cover; background-repeat: no-repeat; left: 38% !important;"></div>
+        <div class="rounded-circle profile-pic" style="background-image: url({{profile.image}});background-position: center; background-size: cover; background-repeat: no-repeat; left: 38% !important;"></div>
         <h3 class="profile-name bg-primary">{{profile.user.username}}</h3>
         <p class="profile-bio">
         {% if profile.bio %}
